--- a/style.css
+++ b/style.css
@@ -14,6 +14,69 @@ body {
     /*background-image: url(images/scene.png);*/
 }
 
+#loginUI {
+    /*width: 300px;*/
+    /*height: 200px;*/
+    padding: 28px;
+    background: #fafafa;
+    border: 1px solid #ebebeb;
+    box-shadow: rgba(0,0,0,0.14902) 0px 1px 1px 0px,rgba(0,0,0,0.09804) 0px 1px 2px 0px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform:translate(-50%, -50%);
+}
+
+
+.loginBtn {
+    position: relative;
+    display: inline-block;
+    padding: 6px 4px 6px 4px;
+    margin: 10px 0;
+    width: 100%;
+    vertical-align: middle;
+    color: #fff;
+    font-size: 16px;
+    line-height: 20px;
+    -webkit-font-smoothing: antialiased;
+    text-align: center;
+    letter-spacing: 1px;
+    background: #c4ad9b;
+    border: 0;
+    border-bottom: 2px solid #77695e;
+    cursor: pointer;
+    -webkit-transition:all 0.15s ease;
+    transition: all 0.15s ease;
+}
+
+
+input {
+    font-size: 16px;
+    margin: 10px 0;
+    padding: 6px 6px 6px 2px;
+    -webkit-appearance: none;
+    display: block;
+    background: #fafafa;
+    color: #636363;
+    width: 100%;
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid #757575;
+}
+
+
+/*#googleLoginBtn {*/
+    /*height: 80px;*/
+    /*width: 200px;*/
+    /*line-height: 80px;*/
+    /*text-align: center;*/
+    /*background-color: #4cbd18;*/
+    /*position: absolute;*/
+    /*left: 50%;*/
+    /*top: 50%;*/
+    /*transform:translate(-50%, -50%);*/
+/*}*/
+
 #hero {
     width: 48px;
     height: 48px;
