--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@ body {
     width: 1440px;
     height: 900px;
     position: relative;
-    background-color: silver;
+    background-color: #474538;
     /*background-image: url(images/scene.png);*/
 }
 
 #loginUI {
-    /*width: 300px;*/
+    width: 210px;
     /*height: 200px;*/
     padding: 28px;
     background: #fafafa;
@@ -26,7 +26,6 @@ body {
     top: 50%;
     transform:translate(-50%, -50%);
 }
-
 
 .loginBtn {
     position: relative;
@@ -49,7 +48,6 @@ body {
     transition: all 0.15s ease;
 }
 
-
 input {
     font-size: 16px;
     margin: 10px 0;
@@ -64,6 +62,9 @@ input {
     border-bottom: 1px solid #757575;
 }
 
+.hide {
+    display: none;
+}
 
 /*#googleLoginBtn {*/
     /*height: 80px;*/
@@ -77,33 +78,74 @@ input {
     /*transform:translate(-50%, -50%);*/
 /*}*/
 
+
+/* Hero UI */
 #hero {
     width: 48px;
     height: 48px;
     position: absolute;
+    text-align: center;
+    margin: 0 auto;
+}
+
+#heroUI {
+    position: relative;
+    bottom: 12px;
 }
 
 .heroUI {
     /*display: inline-block;*/
-    position: relative;
-    bottom: 17px;
+    position: absolute;
+    top: -6px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 #heroName {
     animation: nameColor 2s ease infinite;
     text-align: center;
-
 }
-
 @keyframes nameColor {
     0% { color: #ffffff;}
     50% { color: #d3d3d3;}
     100% { color: #ffffff;}
-
 }
-#heroHP {
-    visibility: hidden;
 
+#heroHP {
+    height: 6px;
+    width: 40px;
+    background-color: #dc0c0c;
+    text-align:center;
+    top: 0;
+    border-radius: 4px;
+}
+
+/* Hero HUD */
+#heroHUDContainer {
+    width: 240px;
+    /*height: 20px;*/
+    background-color: #474538;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+}
+
+#heroHpHUD {
+    width: 240px;
+    /*height: 6px;*/
+    background-color: #772020;
+    position: absolute;
+    bottom: 26px;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+}
+
+.heroHUD {
+    display: inline-block;
+    padding: 5px;
 }
 
 
@@ -172,6 +214,21 @@ animation: walkLeft .4s steps(3) infinite;
 @keyframes walkUp {
     100% { background-position: -144px -144px; }
 }
+
+
+#shieldElem {
+    height: 48px;
+    width: 48px;
+    border-radius: 50%;
+    background-color: rgba(192,192,192,0.3);
+    animation: shield 2s ease infinite;
+}
+@keyframes shield {
+    0% { background-color: rgba(192,192,192,0.2);}
+    50% { background-color: rgba(224, 238, 213, 0.3);}
+    100% { background-color: rgba(192,192,192,0.2);}
+}
+
 
 
 
