rock css changes based on type passed in

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     position: relative;
     background-color: #474538;
     box-sizing: border-box;
-    overflow:hidden;
+    overflow: hidden;
     /*background-image: url(images/scene.png);*/
 }
 
@@ -21,12 +21,12 @@ body {
     padding: 28px;
     background: #fafafa;
     border: 1px solid #ebebeb;
-    box-shadow: rgba(0,0,0,0.14902) 0px 1px 1px 0px,rgba(0,0,0,0.09804) 0px 1px 2px 0px;
+    box-shadow: rgba(0, 0, 0, 0.14902) 0px 1px 1px 0px, rgba(0, 0, 0, 0.09804) 0px 1px 2px 0px;
     position: absolute;
     left: 50%;
     top: 50%;
-    transform:translate(-50%, -50%);
-    z-index:1000;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
 }
 
 .loginBtn {
@@ -46,7 +46,7 @@ body {
     border: 0;
     border-bottom: 2px solid #77695e;
     cursor: pointer;
-    -webkit-transition:all 0.15s ease;
+    -webkit-transition: all 0.15s ease;
     transition: all 0.15s ease;
 }
 
@@ -69,17 +69,16 @@ input {
 }
 
 /*#googleLoginBtn {*/
-    /*height: 80px;*/
-    /*width: 200px;*/
-    /*line-height: 80px;*/
-    /*text-align: center;*/
-    /*background-color: #4cbd18;*/
-    /*position: absolute;*/
-    /*left: 50%;*/
-    /*top: 50%;*/
-    /*transform:translate(-50%, -50%);*/
+/*height: 80px;*/
+/*width: 200px;*/
+/*line-height: 80px;*/
+/*text-align: center;*/
+/*background-color: #4cbd18;*/
+/*position: absolute;*/
+/*left: 50%;*/
+/*top: 50%;*/
+/*transform:translate(-50%, -50%);*/
 /*}*/
-
 
 /* Hero UI */
 #hero {
@@ -106,25 +105,51 @@ input {
     animation: nameColor 2s ease infinite;
     text-align: center;
 }
+
 @keyframes nameColor {
-    0% { color: #ffffff;}
-    50% { color: #d3d3d3;}
-    100% { color: #ffffff;}
+    0% {
+        color: #ffffff;
+    }
+    50% {
+        color: #d3d3d3;
+    }
+    100% {
+        color: #ffffff;
+    }
 }
 
 #heroHP {
     height: 6px;
     width: 40px;
     background-color: #dc0c0c;
-    text-align:center;
+    text-align: center;
     top: 0;
     border-radius: 4px;
+}
+
+/* Speech Bubbles */
+.chatBubble {
+    position: relative;
+    top: 14px;
+    left: 48px;
+    padding: 3px 5px;
+    color: #000;
+    background: #5dd3f3;
+    border-radius: 10px;
+    background: linear-gradient(#6ccfd0, #187fc1);
 }
 
 .rock {
     border-radius: 50%;
     background-color: #00e3bb;
     background: url(images/tileSets/castle.png) -45px -206px;
+    position: absolute;
+}
+
+.rock2 {
+    border-radius: 50%;
+    background-color: #00e3bb;
+    /*background: url(images/tileSets/castle.png) -45px -206px;*/
     position: absolute;
 }
 
@@ -157,7 +182,6 @@ input {
     padding: 5px;
 }
 
-
 /* Tile Map */
 .tile {
     height: 32px;
@@ -169,7 +193,6 @@ input {
 .grass {
     background-color: mediumseagreen;
     background: url(images/tileSets/castle.png) 0px -352px;
-
 }
 
 .dirt {
@@ -178,11 +201,9 @@ input {
 }
 
 /*.dirt {*/
-    /*background-color: tan;*/
-    /*background: url(images/tileSets/pathsAndObjects.png) -224px -352px;*/
+/*background-color: tan;*/
+/*background: url(images/tileSets/pathsAndObjects.png) -224px -352px;*/
 /*}*/
-
-
 
 /* HERO 1 */
 .hero1.stand {
@@ -193,169 +214,178 @@ input {
     background: url(images/heros/mushy.png) 0px -144px;
     animation: walkUp .4s steps(3) infinite;
 }
+
 @keyframes walkUp {
-    100% { background-position: -144px -144px; }
+    100% {
+        background-position: -144px -144px;
+    }
 }
 
 .hero1.right {
     background: url(images/heros/mushy.png) 0px -96px;
     animation: walkRight .4s steps(3) infinite;
 }
+
 @keyframes walkRight {
-    100% { background-position: -144px -96px; }
+    100% {
+        background-position: -144px -96px;
+    }
 }
 
 .hero1.down {
     background: url(images/heros/mushy.png) 0px 0px;
     animation: walkDown .4s steps(3) infinite;
 }
+
 @keyframes walkDown {
-    100% { background-position: -144px 0px; }
+    100% {
+        background-position: -144px 0px;
+    }
 }
 
 .hero1.left {
-background: url(images/heros/mushy.png) 0px -48px;
-animation: walkLeft .4s steps(3) infinite;
-}
-@keyframes walkLeft {
-100% { background-position: -144px -48px; }
+    background: url(images/heros/mushy.png) 0px -48px;
+    animation: walkLeft .4s steps(3) infinite;
 }
 
+@keyframes walkLeft {
+    100% {
+        background-position: -144px -48px;
+    }
+}
 
 /* SKILLS */
 #shieldElem {
     height: 48px;
     width: 48px;
     border-radius: 50%;
-    background-color: rgba(192,192,192,0.3);
+    background-color: rgba(192, 192, 192, 0.3);
     animation: shield 2s ease infinite;
 }
+
 @keyframes shield {
-    0% { background-color: rgba(192,192,192,0.2);}
-    50% { background-color: rgba(224, 238, 213, 0.3);}
-    100% { background-color: rgba(192,192,192,0.2);}
+    0% {
+        background-color: rgba(192, 192, 192, 0.2);
+    }
+    50% {
+        background-color: rgba(224, 238, 213, 0.3);
+    }
+    100% {
+        background-color: rgba(192, 192, 192, 0.2);
+    }
 }
-
-
 
 /*!* HERO 2 *!*/
 
 /*.hero2.stand {*/
-    /*background: url(images/heros/mushy.png) -196px 0px;*/
+/*background: url(images/heros/mushy.png) -196px 0px;*/
 /*}*/
 /*!*UP*!*/
 /*.hero2.up {*/
-    /*background: url(images/heros/mushy.png) -144px -144px;*/
-    /*animation: walkUp .4s steps(3) infinite;*/
+/*background: url(images/heros/mushy.png) -144px -144px;*/
+/*animation: walkUp .4s steps(3) infinite;*/
 /*}*/
 /*@keyframes walkUp {*/
-    /*100% { background-position: -288px -144px; }*/
+/*100% { background-position: -288px -144px; }*/
 /*}*/
 /*!*RIGHT*!*/
 /*.hero2.right {*/
-    /*background: url(images/heros/mushy.png) -144px -96px;*/
-    /*animation: walkRight .4s steps(3) infinite;*/
+/*background: url(images/heros/mushy.png) -144px -96px;*/
+/*animation: walkRight .4s steps(3) infinite;*/
 /*}*/
 /*@keyframes walkRight {*/
-    /*100% { background-position: -288px -96px; }*/
+/*100% { background-position: -288px -96px; }*/
 /*}*/
 /*!*DOWN*!*/
 /*.hero2.down {*/
-    /*background: url(images/heros/mushy.png) -144px 0px;*/
-    /*animation: walkDown .4s steps(3) infinite;*/
+/*background: url(images/heros/mushy.png) -144px 0px;*/
+/*animation: walkDown .4s steps(3) infinite;*/
 /*}*/
 /*@keyframes walkDown {*/
-    /*100% { background-position: -288px 0px; }*/
+/*100% { background-position: -288px 0px; }*/
 /*}*/
 /*!*LEFT*!*/
 /*.hero2.left {*/
-    /*background: url(images/heros/mushy.png) -144px -48px;*/
-    /*animation: walkLeft .4s steps(3) infinite;*/
+/*background: url(images/heros/mushy.png) -144px -48px;*/
+/*animation: walkLeft .4s steps(3) infinite;*/
 /*}*/
 /*@keyframes walkLeft {*/
-    /*100% { background-position: -288px -48px; }*/
+/*100% { background-position: -288px -48px; }*/
 /*}*/
-
-
-
 
 /*!* HERO 5 *!*/
 
 /*.hero5.stand {*/
-    /*background: url(images/heros/mushy.png) -48px -192px;*/
+/*background: url(images/heros/mushy.png) -48px -192px;*/
 /*}*/
 
 /*!*UP*!*/
 /*.hero5.up {*/
-    /*background: url(images/heros/mushy.png) -0px -336px;*/
-    /*animation: walkUp .4s steps(3) infinite;*/
+/*background: url(images/heros/mushy.png) -0px -336px;*/
+/*animation: walkUp .4s steps(3) infinite;*/
 /*}*/
 /*@keyframes walkUp {*/
-    /*100% { background-position: -144px -336px; }*/
+/*100% { background-position: -144px -336px; }*/
 /*}*/
 /*!*RIGHT*!*/
 /*.hero5.right {*/
-    /*background: url(images/heros/mushy.png) -0px -288px;*/
-    /*animation: walkRight .4s steps(3) infinite;*/
+/*background: url(images/heros/mushy.png) -0px -288px;*/
+/*animation: walkRight .4s steps(3) infinite;*/
 /*}*/
 /*@keyframes walkRight {*/
-    /*100% { background-position: -144px -288px; }*/
+/*100% { background-position: -144px -288px; }*/
 /*}*/
 /*!*DOWN*!*/
 /*.hero5.down {*/
-    /*background: url(images/heros/mushy.png) 0px -192px;*/
-    /*animation: walkDown .4s steps(3) infinite;*/
+/*background: url(images/heros/mushy.png) 0px -192px;*/
+/*animation: walkDown .4s steps(3) infinite;*/
 /*}*/
 /*@keyframes walkDown {*/
-    /*100% { background-position: -144px -196px; }*/
+/*100% { background-position: -144px -196px; }*/
 /*}*/
 /*!*LEFT*!*/
 /*.hero5.left {*/
-    /*background: url(images/heros/mushy.png) -0px -240px;*/
-    /*animation: walkLeft .4s steps(3) infinite;*/
+/*background: url(images/heros/mushy.png) -0px -240px;*/
+/*animation: walkLeft .4s steps(3) infinite;*/
 /*}*/
 /*@keyframes walkLeft {*/
-    /*100% { background-position: -144px -240px; }*/
+/*100% { background-position: -144px -240px; }*/
 /*}*/
-
-
-
-
 
 /*!* HERO 6 *!*/
 
 /*.hero6.stand {*/
-    /*background: url(images/heros/mushy.png) -192px -192px;*/
+/*background: url(images/heros/mushy.png) -192px -192px;*/
 /*}*/
 /*!*UP*!*/
 /*.hero6.up {*/
-    /*background: url(images/heros/mushy.png) -144px -336px;*/
-    /*animation: walkUp .4s steps(3) infinite;*/
+/*background: url(images/heros/mushy.png) -144px -336px;*/
+/*animation: walkUp .4s steps(3) infinite;*/
 /*}*/
 /*@keyframes walkUp {*/
-    /*100% { background-position: -288px -336px; }*/
+/*100% { background-position: -288px -336px; }*/
 /*}*/
 /*!*RIGHT*!*/
 /*.hero6.right {*/
-    /*background: url(images/heros/mushy.png) -144px -288px;*/
-    /*animation: walkRight .4s steps(3) infinite;*/
+/*background: url(images/heros/mushy.png) -144px -288px;*/
+/*animation: walkRight .4s steps(3) infinite;*/
 /*}*/
 /*@keyframes walkRight {*/
-    /*100% { background-position: -288px -288px; }*/
+/*100% { background-position: -288px -288px; }*/
 /*}*/
 /*!*DOWN*!*/
 /*.hero6.down {*/
-    /*background: url(images/heros/mushy.png) -144px -192px;*/
-    /*animation: walkDown .4s steps(3) infinite;*/
+/*background: url(images/heros/mushy.png) -144px -192px;*/
+/*animation: walkDown .4s steps(3) infinite;*/
 /*}*/
 /*@keyframes walkDown {*/
-    /*100% { background-position: -288px -196px; }*/
+/*100% { background-position: -288px -196px; }*/
 /*}*/
 /*!*LEFT*!*/
 /*.hero6.left {*/
-    /*background: url(images/heros/mushy.png) -144px -240px;*/
-    /*animation: walkLeft .4s steps(3) infinite;*/
+/*background: url(images/heros/mushy.png) -144px -240px;*/
+/*animation: walkLeft .4s steps(3) infinite;*/
 /*}*/
 /*@keyframes walkLeft {*/
-    /*100% { background-position: -288px -240px; }*/
+/*100% { background-position: -288px -240px; }*/
 /*}*/
