--- a/style.css
+++ b/style.css
@@ -139,9 +139,10 @@ input {
 #heroHP {
     height: 6px;
     width: 40px;
-    background-color: #dc0c0c;
-    text-align: center;
-    top: 0;
+    /*background-color: #dc0c0c;*/
+    /*text-align: center;*/
+    top: 39px;
+    left: 45px;
     border-radius: 4px;
 }
 
@@ -167,7 +168,7 @@ input {
 
 .rock2 {
     border-radius: 50%;
-    background-color: #00e3bb;
+    background-color: #3dac22;
     /*background: url(images/tileSets/castle.png) -45px -206px;*/
     position: absolute;
 }
